# osc

./: .gitignore  ;  CMakeLists.txt
.cache/clangd/index/: main.cpp.6CC9F54CFEF1305C.idx  main.cpp.7A457479C7A6DC05.idx  tests.cpp.1901A953A0FFEC75.idx  tests.cpp.BE79D2F85249976F.idx
cmake/: FetchDependencies.cmake
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp  application.hpp  log.cpp  log.hpp
src/gfx/: buffer.cpp  buffer.hpp  mesh.hpp  vertex.hpp  vulkan-context.cpp  vulkan-context.hpp
src/platform/: log.cpp  log.hpp  platform.cpp  platform.hpp  window.cpp  window.hpp
src/ui/: \  imgui-context.cpp  imgui-context.hpp
src/vulkan/: vulkan-test.hpp
test/: CMakeLists.txt  tests.cpp
